[package]
name = "telegram-bot-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
axum = "0.6.2"
sync_wrapper = "0.1.1"
teloxide = { version = "0.12.0", features = ["macros"] }
shuttle-secrets = "0.8.0"
shuttle-shared-db = { version = "0.8.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
